--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Bharat Kammakatla",
-  "name": "Bharat Kammakatla",
+  "short_name": "Sean Stevens",
+  "name": "Sean Stevens",
   "icons": [
     {
       "src": "/favicon.ico",
