--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://bharatkammakatla.com/",
-  "name": "bharatkammakatla.com",
+  "homepage": "nerdbudltd.com",
+  "name": "nerdbudltd.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
