--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "nerdbudltd.com",
-  "name": "nerdbudltd.com",
+"name": "developer-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
